# Pluely

./: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
electron/: LLMHelper.ts  ProcessingHelper.ts  VisionAgentHelper.ts  WindowHelper.ts  ipcHandlers.ts  main.ts
electron/handlers/: processingHandlers.ts  screenshotHandlers.ts  settingsHandlers.ts  windowHandlers.ts
renderer/public/: manifest.json
src/: App.tsx  index.css
src/features/Debug/: DebugPage.tsx
src/features/LLM/components/: ModelSelector.tsx
src/features/Queue/: QueuePage.tsx
src/features/Queue/components/: QueueCommands.tsx  ScreenshotItem.tsx
src/features/Solutions/: SolutionsPage.tsx
src/features/Solutions/components/: SolutionCommands.tsx
src/shared/ui/: dialog.tsx  toast.tsx
vision-backend/: README.md  agent.py  pyproject.toml  server.py  start.sh
